src/App.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*, *::before, *::after {
  box-sizing: border-box;
}
/*
  2. Remove default margin
*/
* {
  margin: 0;
  padding: 0;
  font: inherit;
}
/*
  Typographic tweaks!
  3. Add accessible line-height
  4. Improve text rendering
*/
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
/*
  5. Improve media defaults
*/
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}
/*
  6. Remove built-in form typography styles
*/

/*
  7. Avoid text overflows
*/
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}
/*
  8. Create a root stacking context
*/
#root, #__next {
  isolation: isolate;
}

/* 
  9. Font Weight
*/
h1,
h2,
h3,
h4,
h5,
h6,
p {
    font-weight: 400;
}

/* remove animations for people who've turned them off */
@media (prefers-reduced-motion: reduce) {  
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}



/* --------------- */
/* custom properties */
/* --------------- */

:root{
  --background-color: #f7f8f3;

  --red:#d74034;
  --white:#f7f8f3;

  --text-darker:#3b4250;
  --text-dark:#8b93a3;
  --text-white: #f7f8f3;


  --ff-primary:'Lexend Deca', sans-serif;

  --ff-body: var(--ff-primary);
  --ff-heading: var(--ff-primary);

  --fw-regular: 400;
  --fw-semi-bold: 500;
  --fw-bold: 700;

  --fs-200: 1.2rem;
  --fs-300: 1.4rem;
  --fs-400: 1.6rem;
  --fs-500: 1.8rem;
  --fs-600: 2rem;
  --fs-700: 2.2rem;

  --gap: 1.5rem;

  --mq-width: 720px;
}

/* --------------- */
/* utility classes */
/* --------------- */

/* general */

.flex{
  display: flex;
  gap: var(--gap, 1rem);
}

.grid{
  display: grid;
  gap: var(--gap, 1rem);
}

.d-block{
  display: block;
}

.container {
  padding-inline: 2em;
  margin-inline: auto;
  max-width: 80rem;
}

.grid-container {
  text-align: center;
  display: grid;
  place-items: center;
  padding-inline: 1rem;

}

.grid-container * {
  max-width: 50ch;
}

.sr-only {
  position: absolute; 
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px; 
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap; /* added line */
  border: 0;
}



/* colors */

/* typography */

/* --------------- */
/* components      */
/* --------------- */

html{
  color-scheme: light dark;
  scroll-padding-top: 68px;
  background: var(--background-color);
}

body{
  display: flex;
  justify-content: center;
  font-family: var(--ff-primary);
  font-size: 62.5%;
  overflow-x: hidden;
}

#root{
  font-size: 1.125rem;
  width: 100%;
}

.hero,
.work,
.about,
.contact{
  max-width: 1350px;
  margin: auto;
  padding: 5rem 1.5rem;
}


/* primary header */

.logo{
  margin: 0.5rem 1.5rem;
}

.logo-div{
  padding: 0.5rem 1.5rem;
}

#header{
  position: sticky;
  top: 0;
  background: var(--background-color);
  box-shadow:0 1rem 1rem #3b42502f;
  z-index: 1001;
}

.primary-header{
  justify-content: space-between;
  max-width: 1240px;
  margin: 0 auto;
}

.primary-header ul{
  align-items: center;
  justify-content: space-between;
  
}

.primary-navigation{
  align-items: center;
  color: var(--red);

}

.primary-navigation--ul{
  padding: 0;
  margin: 0 1.5rem;
  align-items: center;
  justify-content: center;
  list-style: none;
}

.primary-navigation--a{
  text-decoration: none;
  color: var(--red);
}

.mobile-nav-toggle{
  display: none;
}


@media (min-width: 720px){
  #mobile-nav{
    display: none;
  }

}


@media only screen and (max-width: 720px){
  .primary-navigation{
    position: fixed;
    width: 100%;
    height: 300px;
    box-shadow:0 1rem 1rem #3b42502f;
  }

  .primary-navigation ul{
    list-style: none;
    inset: 0 0 0 0%;
    width: 100%;
    height: 100%;
    justify-content: center;
    flex-direction: column;
    padding: min(30%, 10rem) 2rem;
    margin: 0;
    align-items: center;

    background: var(--background-color);

  }

  .mobile-nav-toggle{
    display: block;
    margin: 0.5rem 1.5rem;
    padding: 0;
    z-index: 9999;
    background: transparent;
    background-repeat: no-repeat;
    width: 3rem;
    aspect-ratio: 1;
    
    border: 0;
  }

  #desktop-nav{
    display: none;
  }

}

.cta{
  text-decoration: none;
  border-radius: 50px;
  padding: .5rem 1.5rem;
  color: var(--white);
  background-color: var(--red);
  box-shadow: rgba(215, 62, 51, 0.3) 0px 0px 25px 0px
}

h1{
  font-size: var(--fs-700);
  font-weight: var(--fw-bold);
}

h2{
  font-size: var(--fs-600);
  font-weight: var(--fw-bold);
  color: var(--red);
}

h3{
  font-size: var(--fs-500);
  font-weight: var(--fw-semi-bold);
}


/* ----------------------------- */
/* section specific background   */
/* ----------------------------- */

.hero{
  padding-top: 10rem;
  padding-bottom: 10rem;
  justify-content: center;
  align-items: center;
}

.hero--container{
  width: 100%;
  color: var(--red);
}

.hero--text{
  position: relative;
  left: 3rem;
}

.hero--image{
  position: relative;

}

.grow-2{
  flex-grow:2;
}

.work{
  flex-direction: column;
  align-items: center;
  padding: 5rem;
}

.description{
  flex-basis: 1;
  background: linear-gradient(-90deg, transparent, #fff);
  border-radius: 15px;
  padding: 2rem;
  font-weight: var(--fw-regular);
  margin: 0 0 1rem 0 ;
}

.description a{
  color: var(--red);
}

.tags span{
  display: inline-block;
  margin: 0 1rem 1rem 0;
  box-shadow: rgba(215,64,52, .15) 0 0 25px;
  font-weight: var(--fw-semi-bold);
  background-color: #fff;
  padding: .5rem;
  border-radius: 20px;
  font-size: 1rem;
}


.grid-2{
  display: grid;
  gap: var(--gap);
  grid-template-columns: minmax(1fr, 500px) 1fr;
  grid-template-areas: 
  "main side"
}



.about--img{
  grid-area: main;
}

/* .about--img img{
  margin-left: auto;
} */

.about--text{
  grid-area: side;
}


.about--text p{
  margin-bottom: 1.5rem;
}



.contact{
  grid-template-columns: 1fr 1fr;
  gap: var(--gap);
  grid-template-areas: 
  'side main'
  'bottom bottom'
  ;
}

.contact--img{
  grid-area: side;
}

.contact--text{
  display: flex;
  flex-direction: column;
  grid-area: main;

}

.contact--text *{
  display: block;
  width: 100%;
  border: none;
}

.form input{
  margin-bottom: 1.5rem;
  box-shadow: rgba(215,64,52, .15) 0 0 25px;
  padding: 0.5rem;
}

.form textarea{
  margin-bottom: 2rem;
  box-shadow: rgba(215,64,52, .15) 0 0 25px;
  padding: 0.5rem;
}

#form--message{
  height: 6rem;
}

.contact--email{
  display: flex;
  justify-content: center;
  grid-area: bottom;
  padding: 2rem;
  box-shadow: rgba(215,64,52, .3) 0 0 25px;
  border-radius: 20px;
  margin-top: 5rem;
  align-items: center;
  flex-wrap: wrap;
}

.contact--email h1{
  margin-right: 1.5rem;
}

h2{
  margin-bottom: 1rem;
}

.footer{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 5rem;
  box-shadow: rgba(215, 62, 51, 0.3) 0px 0px 5px 0px;
  border-top-color: rgba(215, 62, 51, 0.3)
}

@media only screen and (max-width: 720px){
  .grid-2{
    grid-template-columns: 1fr;
    grid-template-areas: 
    "main"
    "side";
  }

  .about--text{
    display: flex;
    flex-direction: column;
  }

  .about--text h2,
  .about--text a{
    align-self: center;
  }

  .description{
    background: linear-gradient(0deg, transparent, #fff);
  }

  .contact{
    grid-template-columns: 1fr ;
    gap: var(--gap);
    grid-template-areas: 
    'side'
    'main'
    'bottom'
    ;
  }

  .contact--email h1{
    font-size: var(--fs-400);
    margin-right: 0;
  }
}

